--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,16 @@ img {
 	max-width: 100%;
 }
 /*==========================Reset==========================*/
+
+.cabecalho{
+	width: 100%;
+	float: left;
+	padding: 3% 4%;
+}
+.logo{
+	width: 56px;
+	height: 56px;
+	float: left;
+	background: url(../img/logo-mobile.png) center center/56px no-repeat;
+	font-size: 0;
+}
