--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,7 @@ ul {
 img {
 	max-width: 100%;
 }
-/*==========================Reset==========================*/
-
+/*==========================CABEÇALHO==========================*/
 .cabecalho{
 	width: 100%;
 	float: left;
@@ -35,4 +34,46 @@ img {
 	float: left;
 	background: url(../img/logo-mobile.png) center center/56px no-repeat;
 	font-size: 0;
+}
+.btn-menu{
+	width: 56px;
+	height: 56px;
+	float: right;
+	text-align: center;
+	color: #fff;
+	border-radius: 56px;
+	cursor: pointer;
+	background: linear-gradient(to right,#ce2e3c,#da6709);
+}
+/*==========================MENU==========================*/
+.menu {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	background-color: rgba(0,0,0,0.9);	
+	top: 0;
+	left: 0;
+}
+.btn-close{
+	font-size: 3em;
+	color: #fff;
+	float: right;
+	cursor: pointer;
+	margin-right: 5%;
+}
+.menu ul{
+	width: 100%;
+	float: left;
+	text-align: center;
+}
+.menu ul li{
+	padding: 1.5%;
+}
+.menu ul li a{
+	font-size: 2em;
+	color: #fff;
+	padding: 1.5% 3%;
+}
+.menu ul li a:hover{
+	border: 1px solid #da6709;
 }
