--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,22 @@ ul {
 img {
 	max-width: 100%;
 }
-/*==========================CABEÇALHO==========================*/
-.cabecalho{
+/*==========================Helps==========================*/
+.container{
 	width: 100%;
 	float: left;
 	padding: 3% 4%;
+	text-align: center;
 }
+/*==========================BG Color==========================*/
+.bg-gradiente{
+	background: linear-gradient(to right,#ce2e3c,#da6709);
+}
+.bg-black{
+	background-color: #130400;
+}
+
+/*==========================CABEÇALHO==========================*/
 .logo{
 	width: 56px;
 	height: 56px;
@@ -42,8 +52,7 @@ img {
 	text-align: center;
 	color: #fff;
 	border-radius: 56px;
-	cursor: pointer;
-	background: linear-gradient(to right,#ce2e3c,#da6709);
+	cursor: pointer;	
 }
 /*==========================MENU==========================*/
 .menu {
@@ -79,11 +88,7 @@ img {
 	border: 1px solid #da6709;
 }
 /*==========================BANNER==========================*/
-.banner {
-	width: 100%;
-	float: left;
-	text-align: center;
-	padding: 3% 4%;
+.banner {	
 	background: url(../img/bg.jpg) no-repeat fixed;
 }
 .title{
@@ -105,33 +110,23 @@ img {
 .buttons i{
 	float: right;
 }
-.btn-cadastrar{
+.btn{
 	width: 100%;
 	font-size: 1.5em;
 	text-align: left;
 	cursor: pointer;
 	padding: 5%;
 	border-radius: 10px;
+}
+.btn-cadastrar{
 	background-color: #fff;
 	color: #130400;
 }
-.btn-sobre{
-	width: 100%;
-	font-size: 1.5em;
-	text-align: left;
-	cursor: pointer;
-	padding: 5%;
-	border-radius: 10px;
-	background-color: #130400;
+.btn-sobre{	
 	color: #fff;
 	margin-top: 2%;
 }
 /*==========================BANNER==========================*/
-.servicos{
-	width: 100%;
-	float: left;
-	padding: 3% 4%;	
-}
 .servico{
 	width: 100%
 	background-color#fff;
@@ -161,11 +156,7 @@ img {
 	line-height: 1.5em;
 }
 /*==========================Newsletter==========================*/
-.newsletter{
-	width: 100%;
-	float: left;
-	text-align: center;
-	padding: 3% 4%;
+.newsletter{	
 	background-color: #130400;	
 }
 .newsletter h2{
@@ -196,7 +187,19 @@ img {
 	cursor: pointer;
 	margin-top: 2%;
 }
-
-
-
-
+/*==========================Rodapé==========================*/
+.social-icons a{
+	font-size: 1.5em;
+	color: rgba(255,255,255,0.7);
+	margin-right: 3%;
+}
+.social-icons a:last-child{
+	margin-right: 0;
+}
+.social-icons a:hover{
+	color: rgb(255,255,255);
+}
+.copyright{
+	margin-top: 2%;
+	color: rgba(255,255,255,0.7);
+}
